links de navegação corrigidos

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="https://www.android.com/intl/pt_br/new-features-on-android/">Notícias</a>
-        <a href="https://www.tecmundo.com.br/software/198354-10-curiosidades-android-brasil.htm">Curiosidades</a>
-        <a href="https://instagram.com/rogattip">Fale Conosco</a>
+        <a href="https://instagram.com/rogattip">Contato</a>
     </nav>
     </header>
     <main >
